# qsl

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.old.md
.github/workflows/: build.yml  cmake.yml  tests.yml
docs/: Doxyfile  conf.py  devel.rst  index.rst  install.rst  overview.rst  requirements.txt  testing.rst
docs/qubits/: qubits.rst
examples/: basics  benchmark-np.cpp  benchmark.cpp  example.cpp  resize.cpp  verify.cpp
include/qsl/: bench.hpp  benchmark.hpp  checkers.hpp  concepts.hpp  qubits.hpp  utils.hpp  verify.hpp
include/qsl/benchmark/: compare.hpp  compare_multi.tpp  compare_single.tpp  results.hpp  results.tpp  time.hpp  time_multi.tpp  time_single.tpp
include/qsl/qubits/: asm.hpp  default.hpp  experimental.hpp  np.hpp  omp.hpp  omp_np.hpp  resize.hpp  thread.hpp
include/qsl/threads/: joiner.hpp  pool.hpp  queue.hpp  queue.tpp
include/qsl/utils/: colours.hpp  complex.hpp  misc.hpp  quantum.hpp  random.hpp  timer.hpp
include/qsl/verify/: checkers.hpp  stategen.hpp  verify.tpp
old/: CMakeLists.txt
old/docs/: Doxyfile  conf.py  implementation.rst  install.rst  overview.rst  testing.rst
old/examples/: Makefile  basics.cpp  benchmark.cpp  example.cpp  resize.cpp
old/include/qsl/: qubits.hpp
old/include/qsl/qubits/: resize.hpp
old/include/qsl/utils/: colours.hpp
old/other/tests/: CMakeLists.txt  c_test.cpp  cache_test.cpp  flat_test.cpp  intrinsics_test.cpp  make.sh  quest_test.cpp  reverse_test.cpp  separate_test.cpp  struct_test.cpp
old/scripts/: disassemble.sh  make-source-file.sh  plot.py
old/src/qubits/np/: np.cpp
old/src/qubits/resize/: measure.cpp  resize.cpp
other/templates/: NOTICE  header.hpp  source.cpp  template.tpp
other/tests/: CMakeLists.txt  c_test.cpp  cache_test.cpp  cmake_defines.hpp.in  flat_test.cpp  intrinsics_test.cpp  make.sh  omp_test.cpp  oneloop_test.cpp  phase_test.cpp  quest_test.cpp  reverse_test.cpp  separate_test.cpp  stdcmplx_test.cpp  struct_test.cpp  while_test.cpp
results/: np_phase.csv
scripts/: graphs.py  make-source-file.sh  update-license.sh
src/: CMakeLists.txt  benchmark.cpp  example.cpp  verify.cpp
src/gtest/: gates.cpp  measurements.cpp  one-qubit-gates.cpp  resize-test.cpp  sim-constructors.cpp  test-utils.cpp  test-utils.hpp  utils.cpp
src/lib/: CMakeLists.txt
src/lib/qubits/: asm.cpp  omp.cpp  qubits_default.cpp  qubits_np.cpp  qubits_omp.cpp
src/lib/qubits/default/: default.cpp  gates.cpp  measure.cpp
src/lib/qubits/np/: gates.cpp  measure.cpp  np.cpp
src/lib/qubits/omp/: gates.cpp  measure.cpp  omp.cpp
src/lib/qubits/x86_64/: asm.S  asmtools.cpp  cpp.S  pauliX.S  pauliX.S.old  tools.S
src/lib/threads/: joiner.cpp
src/lib/utils/: complex.cpp  misc.cpp  quantum.cpp  random.cpp  timer.cpp
src/qubits/: qubits_thread.cpp
src/qubits/default/: default.cpp  gates.cpp  measure.cpp
src/qubits/experimental/: experimental.cpp  gates.cpp  measure.cpp
src/qubits/np/: gates.cpp  measure.cpp  np.cpp
src/qubits/omp/: gates.cpp  measure.cpp  omp.cpp
src/qubits/omp_np/: gates.cpp  measure.cpp  omp_np.cpp
src/qubits/resize/: gates.cpp  measure.cpp  resize.cpp
src/qubits/x86_64/: README.md  gate.S  new.S  old.S  rotateX.S
src/tests/: basic-tests.cpp  flat_test.cpp  omp_test.cpp  phase_test.cpp  quest_test.cpp  reverse_test.cpp  stdcmplx_test.cpp  while_test.cpp
src/threads/: pool.cpp
src/utils/: complex.cpp  misc.cpp  print.cpp  quantum.cpp  random.cpp  timer.cpp
v1/: Makefile  generic  generic.cpp  plan.org  plan.org_archive  qsl.hpp
v1/compressed/: README.org
v1/compressed/hdf5/: Makefile  hdf5.cpp
v1/draft2/: Makefile  generic  generic.cpp  zipper  zipper.cpp
v1/draft3/: Makefile  generic  generic.cpp  typelist.hpp
v1/draft4/: Makefile  generic  generic.cpp  more  more.cpp  typelist.hpp
v1/draft5/: Makefile  bug  bug.cpp  bug2  bug2.cpp  generic  generic.cpp  module  module.cpp  part1.cpp  part2.cpp  speech.cpp  test.cpp
v1/draft5/bug-report/: Makefile  bug  bug.bc  bug.cpp  bug.ii  bug.s  errors.txt  usecase  usecase.bc  usecase.cpp  usecase.ii  usecase.s  workaround  workaround.bc  workaround.cpp  workaround.ii  workaround.s
v1/draft5/gcm.cache/: speech.gcm  test-part1.gcm  test-part2.gcm
v1/experiments/gtest/: CMakeLists.txt  main.cpp  sim-tests.cpp  sim.hpp
v1/experiments/seeding/: Makefile  README.org  main  main.cpp
v1/header/: CMakeLists.txt  Doxyfile  Makefile  README.org  explicit.py  explicit.tpp  main.cpp  meta.hpp  qsl-testing.cpp  qsl-testing.hpp  qsl.cpp  qsl.hpp  qsl2.hpp  test.cpp
